# app2widget

./: .env.example  .gitattributes  .gitignore  README.md  index.html  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
prisma/: import-apps.ts  schema.prisma  seed.ts
public/: app_data_v4.6.json
src/: App.tsx
training/: pyproject.toml
training/configs/: generation_config.yaml  grpo_config.yaml  grpo_config_32b.yaml
training/data/: dataset_5samples_backup.jsonl
training/data/teacher_metadata/: sample_0000.json  sample_0001.json  sample_0002.json  sample_0003.json  sample_0004.json  sample_0005.json  sample_0006.json  sample_0007.json  sample_0008.json  sample_0009.json  sample_0010.json  sample_0011.json  sample_0012.json  sample_0013.json  sample_0014.json  sample_0015.json  sample_0016.json  sample_0017.json  sample_0018.json  sample_0019.json  sample_0020.json  sample_0021.json  sample_0022.json  sample_0023.json  sample_0024.json  sample_0025.json  sample_0026.json  sample_0027.json  sample_0028.json  sample_0029.json  sample_0030.json  sample_0031.json  sample_0032.json  sample_0033.json  sample_0034.json  sample_0035.json  sample_0036.json  sample_0037.json  sample_0038.json  sample_0039.json  (+369 more)
training/harness/: index.html  package-lock.json  package.json  vite.config.ts
training/harness/src/: App.tsx  main.tsx  response.json
training/scripts/: generate_teacher_data.py  run_training.py  serve.sh
training/src/: config.py  data_generation.py  grpo_trainer.py  prompt_builder.py  renderer.py  reward.py  utils.py
(+43 files in other folders)
